src/main/java/org/example/springv3/core/error/ex/Exception404.java
package org.example.springv3.core.error.ex;

// 인증관련
public class Exception404 extends RuntimeException {
    public Exception404(String message) {
        super(message);
    }
}
